--- a/Ttfs2Mix.csproj
+++ b/Ttfs2Mix.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="MixLibrary, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\MixLibrary.1.2.0\lib\netstandard2.0\MixLibrary.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
